src/styles.css
.header {
  text-align: center;
}
.title-capitalize {
  text-transform: capitalize;
}
.add-book-form__modal {
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: #000;
  background-color: rgba(0, 0, 0, 0.4);
  opacity: 0;
  -webkit-transition: opacity 400ms ease-in;
  -moz-transition: opacity 400ms ease-in;
  transition: opacity 400ms ease-in;
  pointer-events: none;
}

.add-book-form__modal:target {
  opacity: 1;
  pointer-events: auto;
}

.add-book-form__modal-container {
  background-color: #fefefe;
  margin: 15% auto;
  padding: 5px;
  border: 1px solid #888;
  width: 80%;
  background-image: linear-gradient(
    180.5deg,
    rgba(245, 245, 220, 1) 23.6%,
    rgba(231, 231, 231, 1) 130.2%
  );
  width: 78%;
  margin: 25% auto;
  border-radius: 20px;
}
.new-book-form__legend {
  font-size: 1.5rem;
}

.add-book-form__modal-close {
  float: right;
  font-size: 28px;
  font-weight: bold;
  margin-right: -0.9rem;
  margin-top: -1rem;
  background: #606061;
  color: #fff;
  line-height: 1.5rem;
  text-align: center;
  width: 1.5rem;
  text-decoration: none;
  border-radius: 12px;
  box-shadow: 1px 1px 3px #000;
}
.add-book-form__modal-close:hover,
.add-book-form__modal-close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
  background: #00d9ff;
}
h1,
p {
  font-family: Bright, Georgia, serif;
}
.header__subtitle {
  font-size: smaller;
  width: 52%;
  display: block;
  background-color: #fff5ee;
  margin: 0 auto;
  border-top: dashed 1px black;
}
.header__subtitle > a:nth-child(1) {
  text-decoration: none;
}
html {
  background-color: #fff8dc;
  text-align: center;
}
.header__title {
  line-height: 21.8px;
}
a {
  text-decoration: none;
}
.custom-icon-btns {
  border-style: ridge;
  padding: 0.8rem;
  border-color: #000;
  width: 9.3rem;
}

.open-add-book-form__btn {
  text-align: right;
  background: url("./resources/add.svg");
  background-repeat: no-repeat;
  background-position: 9px 4px;
  display: inline-block;
  padding: 0.5rem;
  color: #000;
  width: 160px;
  margin-top: 3rem;
}

.credits__btn {
  display: inline-block;
  position: relative;
  width: 14.18rem;
}

.credits__btn::before {
  content: "";
  position: absolute;
  width: 1.2rem;
  height: 1.2rem;
  top: 35%;
  left: 25%;
  z-index: -1;
  background: url("./resources/arrow.svg");
  background-size: 1.2rem;
  background-repeat: no-repeat;
  transition: 0.1s linear;
}

.credits__btn--rotate-arow::before {
  transform: rotate(180deg);
  top: 17%;
}

.credits__msg {
  width: 16rem;
  margin: 0 auto;
  text-align: left;
  margin-bottom: 0.25rem;
}

.credits__msg-list {
  list-style-type: square;
}

.credits__msg-end {
  text-align: center;
  margin-top: -0.87rem;
}

.header__title {
  font-size: 2rem;
  margin: 0 auto;
  background-color: bisque;
  width: 66%;
  padding: 2%;
  margin-top: 6%;
}
.app-wrapper {
  margin: 0 auto;
  margin-bottom: 35vh;
}

.main__library-header {
  margin-top: 25vh;
}

.new-book-form {
  padding: 2%;
}

.new-book-form__fieldset {
  margin: 0 auto;
}

.new-book-form__fields-container {
  display: grid;
  grid-template-columns: auto;
  justify-content: center;
}

.new-book-form__field-container > input {
  display: block;
}

.new-book-form__field-container > label {
  text-align: left;
  display: block;
}

#fpages {
  width: 3.9rem;
}
.new-book-form__submit {
  display: block;
  background-color: #f4ab54;
  width: 6.5rem;
  margin: 0 auto;
  padding: 0.75rem;
  border: none;
  border-radius: 0.5rem;
  color: #fff;
  cursor: pointer;
  margin-top: 0.6rem;
}

.library__book {
  background-color: #fff5ee;
  width: 90%;
  margin: 0 auto;
}

.library__book-detail-item {
  display: flex;
}

.library__book-detail-list {
  text-align: left;
  list-style-type: none;
  display: grid;
  grid-template-columns: 33% 33% 33%;
}

li.library__book-detail-item:nth-child(1) {
  width: 10rem;
  grid-column-start: 1;
}
li.library__book-detail-item:nth-child(2) {
  grid-column-start: 1;
}
li.library__book-detail-item:nth-child(3) {
  grid-column-start: 3;
  justify-content: end;
  margin-right: 2rem;
}

.book-btn {
  float: right;
  position: relative;
  background: none;
  border: none;
  cursor: pointer;
}

.book-remove-btn {
  bottom: 8rem;
  right: 0.2rem;
  font-size: 1.9rem;
  color: gray;
}

.book-toggle-finished-status-btn {
  bottom: 2.5rem;
  left: 1.9rem;
  font-size: 1.1rem;
}

.credits__msg--hidden {
  display: none;
}
.view-code-btn {
  display: flex;
  background-image: -webkit-linear-gradient(
    -70deg,
    rgb(146, 194, 250),
    rgb(221, 143, 190)
  );
  width: 7rem;
  height: 4rem;
  text-decoration: none;
  color: #000;
  justify-content: space-evenly;
  align-items: center;
  padding-bottom: 10px;
  margin: 1.1rem auto 0;
  border: 1px solid #000;
}

.view-code-btn:active {
  filter: brightness(1.2);
}

.view-code-btn__icon {
  display: block;
  align-self: center;
  width: 4.7rem;
  height: 3rem;
  padding: 0;
  margin-top: 0.58rem;
  background: url(./resources/github.svg) no-repeat center;
  margin-left: 0.6rem;
}

.view-code-btn__label {
  font-size: 1em;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  margin-left: 0.66rem;
  margin-top: 1.4rem;
}
.no-style-anchor {
  color: #000;
  text-decoration: none;
}

